  generating sitemaps
* (bug 16428) Include permalink in printable version
* (bug 96170) Add array support for space-separated list attributes (like
  'class') in the Html helper class.
* (bug 26470) Add checkered background image on hover on files pages.
* (bug 30774) mediawiki.html: Add support for numbers and booleans in the
  attribute values and element contents.

=== Bug fixes in 1.19 ===
* $wgUploadNavigationUrl should be used for file redlinks if
  $wgUploadMissingFileUrl is not set. The first was used for this
  until the second was introduced in 1.17.
* (bug 25355) Parser generates edit section links for special pages.
* (bug 27894) Move 'editondblclick' event listener down from body to
  div#bodyContent.
* (bug 30172) The check for posix_isatty() in maintenance scripts did not detect
  when the function exists but is disabled. Introduced
  Maintenance::posix_isatty().
* (bug 30264) Changed installer-generated LocalSettings.php to use
  require_once() instead require() for included extensions.
* Do not convert text in the user interface language to another script.
* (bug 26283) Previewing user JS/CSS pages didn't load other user JS/CSS pages
* (bug 11374) Improved diff readability for colorblind people.
* (bug 26486) ResourceLoader modules with paths to nonexistent files cause PHP
  warnings/notices to be thrown.
* (bug 30335) Fix for HTMLForms using GET breaking when non-friendly URLs are
  used
* (bug 28649) Avoiding half truncated multi-byte unicode characters when
  truncating log comments.
* Show --batch-size option in help of maintenance scripts that support it
* (bug 4381) Magic quotes cleaning was not comprehensive, key strings were not
  unescaped
* (bug 30684) Fix bad escaping in mw.message for inexistent messages (i.e. <key>)
* (bug 23057) Importers no longer can 'edit' or 'create' a fully-protected page by
  importing a new revision into it
* (bug 30192) Thumbnails of archived files are now deleted