@@ -2680,6 +2680,11 @@ $wgMessageStructure = array(
 		'variantname-ike-latn',
 		'variantname-iu',
 	),
+	'variantname-shi' => array(
+		'variantname-shi-tfng',
+		'variantname-shi-latn',
+		'variantname-shi',
+	),
 	'metadata' => array(
 		'metadata',
 		'metadata-help',
@@ -3658,6 +3663,7 @@ Variants for Chinese language",
 	'variantname-ku'      => 'Variants for Kurdish language',
 	'variantname-tg'      => 'Variants for Tajiki language',
 	'variantname-iu'      => 'Variants for Inuktitut language',
+	'variantname-shi'     => 'Variants for Tachelhit language',
 	'media-info'          => 'Media information',
 	'metadata'            => 'Metadata',
 	'exif'                           => 'EXIF tags',
